--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/koa-router": "^7.0.28",
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
+    "tslint": "^5.10.0",
     "typescript": "^2.8.3"
   },
   "dependencies": {
