--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Javier Aviles",
   "license": "MIT",
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/koa": "2.0.44",
     "@types/koa-router": "^7.0.28",
     "@types/node": "^6.0.110",
