--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-typescript-koa-rest",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "API REST using NodeJS and KOA framework, typescript",
   "main": "dist/index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
     "@types/koa": "2.0.44",
+    "@types/koa-jwt": "^3.3.0",
     "@types/koa-router": "^7.0.28",
     "@types/node": "^6.0.110",
     "@types/shelljs": "^0.7.9",
@@ -38,6 +39,7 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "koa": "^2.5.1",
+    "koa-jwt": "^3.3.2",
     "koa-router": "^7.4.0",
     "winston": "^2.4.2"
   }
