leave DB host as if it is running locally or Docker is running on Linux/w10

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,6 @@
 {
    "type": "postgres",
-   "host": "192.168.99.101",
+   "host": "localhost",
    "port": 5432,
    "username": "user",
    "password": "pass",
