--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "node-typescript-koa-rest",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "API REST using NodeJS and KOA framework, typescript. TypeORM for SQL with class-validators. Middlewares JWT and Winston.",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "scripts": {
     "watch-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/server.ts",
     "build-ts": "tsc",
