--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "koa-jwt": "^3.3.2",
     "koa-router": "^7.4.0",
     "pg": "^7.4.3",
+    "pg-connection-string": "^2.0.0",
     "reflect-metadata": "^0.1.12",
     "typeorm": "^0.2.6",
     "winston": "^2.4.2"
