--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "node dist/server.js",
     "build": "npm run tslint && npm run build-ts && npm run copy-static-assets",
     "start": "npm run serve",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build && npm run start"
   },
   "author": "Javier Aviles",
   "license": "MIT",
