--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,4 @@
-NODE_PORT=3000
+PORT=3000
 NODE_ENV=development
 JWT_SECRET=your-secret-whatever
 DATABASE_URL=postgres://user:pass@localhost:5432/apidb
