--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "start": "npm run serve",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "8.x.x",
+    "npm": "5.x.x"
+  },
   "author": "Javier Aviles",
   "license": "MIT",
   "homepage": "https://github.com/javieraviles/node-typescript-koa-rest#readme",
@@ -29,7 +33,8 @@
     "helmet",
     "sql",
     "api",
-    "rest"
+    "rest",
+    "heroku"
   ],
   "repository": "github:javieraviles/node-typescript-koa-rest",
   "devDependencies": {
