--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-typescript-koa-rest",
-  "version": "1.2.0",
-  "description": "API REST using NodeJS and KOA framework, typescript. TypeORM for SQL with class-validators. Middlewares JWT and Winston.",
+  "version": "1.3.0",
+  "description": "API REST using NodeJS and KOA framework, typescript. TypeORM for SQL with class-validators. Middlewares JWT, CORS, Winston Logger.",
   "main": "dist/server.js",
   "scripts": {
     "watch-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/server.ts",
@@ -34,7 +34,8 @@
     "sql",
     "api",
     "rest",
-    "heroku"
+    "heroku",
+    "cors"
   ],
   "repository": "github:javieraviles/node-typescript-koa-rest",
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-jwt": "^3.3.0",
     "@types/koa-router": "^7.0.28",
+    "@types/koa__cors": "^2.2.2",
     "@types/node": "^6.0.110",
     "@types/shelljs": "^0.7.9",
     "@types/winston": "^2.3.9",
@@ -54,6 +56,7 @@
     "typescript": "^2.8.3"
   },
   "dependencies": {
+    "@koa/cors": "^2.2.1",
     "class-validator": "^0.8.5",
     "dotenv": "^5.0.1",
     "koa": "^2.5.1",
