--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-typescript-koa-rest",
-  "version": "1.4.2",
-  "description": "API REST using NodeJS and KOA framework, typescript. TypeORM for SQL with class-validators. Middlewares JWT, CORS, Winston Logger.",
+  "version": "1.5.0",
+  "description": "API REST using NodeJS and KOA framework, typescript. TypeORM for SQL with class-validators. Middlewares JWT, CORS, Winston Logger. Swagger API docs",
   "main": "dist/server.js",
   "scripts": {
     "watch-server": "nodemon --watch src -e ts,tsx --exec ts-node src/server.ts",
@@ -14,8 +14,8 @@
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "node": "8.x.x",
-    "npm": "5.x.x"
+    "node": "10.x.x",
+    "npm": "6.x.x"
   },
   "author": "Javier Aviles",
   "license": "MIT",
@@ -39,34 +39,35 @@
   ],
   "repository": "github:javieraviles/node-typescript-koa-rest",
   "devDependencies": {
-    "@types/dotenv": "^4.0.3",
-    "@types/koa": "2.0.44",
-    "@types/koa-bodyparser": "^4.2.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/koa": "2.0.49",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-jwt": "^3.3.0",
-    "@types/koa-router": "^7.0.28",
-    "@types/koa__cors": "^2.2.2",
-    "@types/node": "^10.7.0",
+    "@types/koa-router": "^7.0.42",
+    "@types/koa__cors": "^2.2.3",
+    "@types/node": "^12.0.12",
     "@types/shelljs": "^0.8.0",
-    "nodemon": "^1.17.4",
+    "nodemon": "^1.19.1",
     "shelljs": "^0.8.2",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.10.0",
-    "typescript": "^3.0.1"
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.2"
   },
   "dependencies": {
-    "@koa/cors": "^2.2.1",
+    "@koa/cors": "^3.0.0",
     "class-validator": "^0.9.1",
-    "dotenv": "^6.0.0",
-    "koa": "^2.5.1",
+    "dotenv": "^8.0.0",
+    "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-helmet": "^4.0.0",
+    "koa-helmet": "^4.2.0",
     "koa-jwt": "^3.3.2",
     "koa-router": "^7.4.0",
+    "koa-swagger-decorator": "^1.5.16",
     "pg": "^7.4.3",
     "pg-connection-string": "^2.0.0",
     "reflect-metadata": "^0.1.12",
-    "typeorm": "^0.2.6",
-    "winston": "^3.0.0"
+    "typeorm": "^0.2.18",
+    "winston": "^3.2.1"
   }
 }
