--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "serve": "node dist/server.js",
     "build": "npm run tslint && npm run build-ts && npm run copy-static-assets",
     "start": "npm run serve",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "test:integration": "newman run integrationtests/node-koa-typescript.postman_collection.json",
+    "test:load": "locust --no-web -c 50 -r 10 -f loadtests/locustfile.py --run-time 1m --host=https://node-typescript-koa-rest.herokuapp.com"
   },
   "engines": {
     "node": "10.x.x",
