--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "repository": "github:javieraviles/node-typescript-koa-rest",
   "devDependencies": {
+    "@types/cron": "^1.7.1",
     "@types/dotenv": "^6.1.1",
     "@types/koa": "2.0.49",
     "@types/koa-bodyparser": "^4.3.0",
@@ -59,6 +60,7 @@
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "class-validator": "^0.9.1",
+    "cron": "^1.7.2",
     "dotenv": "^8.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
