--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,20 +33,7 @@ jobs:
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         HEROKU_APP: ${{ secrets.HEROKU_APP }}
-    - name: Push to Heroku
-      uses: actions/heroku@master
-      with:
-        args: container:push web
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        HEROKU_APP: ${{ secrets.HEROKU_APP }}
-    - name: Trigger release in Heroku
-      uses: actions/heroku@master
-      with:
-        args: container:release web
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        HEROKU_APP: ${{ secrets.HEROKU_APP }}
+      run: git push heroku master
 
   integration_tests:
     name: Run integration tests
