Dockerizing app + trying to deploy it as container to Heroku

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,19 @@ jobs:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         HEROKU_APP: ${{ secrets.HEROKU_APP }}
     - name: Push to Heroku
-      run: git push heroku master
+      uses: actions/heroku@master
+      with:
+        args: container:push web
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        HEROKU_APP: ${{ secrets.HEROKU_APP }}
+    - name: Trigger release in Heroku
+      uses: actions/heroku@master
+      with:
+        args: container:release web
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        HEROKU_APP: ${{ secrets.HEROKU_APP }}
 
   integration_tests:
     name: Run integration tests
