--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,12 @@ jobs:
     runs-on: ubuntu-16.04
     needs: build
     steps:
+    - name: Build docker image
+      uses: actions/docker/cli@master
+      with:
+        args: build -t $HEROKU_APP .
+      env:
+        HEROKU_APP: ${{ secrets.HEROKU_APP }}
     - name: Login into Heroku
       uses: actions/heroku@master
       with:
@@ -34,19 +40,7 @@ jobs:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         HEROKU_APP: ${{ secrets.HEROKU_APP }}
     - name: Push to Heroku
-      uses: actions/heroku@master
-      with:
-        args: container:push web
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        HEROKU_APP: ${{ secrets.HEROKU_APP }}
-    - name: Trigger release in Heroku
-      uses: actions/heroku@master
-      with:
-        args: container:release web
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        HEROKU_APP: ${{ secrets.HEROKU_APP }}
+      run: git push heroku master
 
   integration_tests:
     name: Run integration tests
