--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
     runs-on: ubuntu-16.04
     needs: build
     steps:
+    - uses: actions/checkout@master
     - name: Build docker image
       uses: actions/docker/cli@master
       with:
@@ -40,7 +41,19 @@ jobs:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         HEROKU_APP: ${{ secrets.HEROKU_APP }}
     - name: Push to Heroku
-      run: git push heroku master
+      uses: actions/heroku@master
+      with:
+        args: container:push web
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        HEROKU_APP: ${{ secrets.HEROKU_APP }}
+    - name: Trigger release in Heroku
+      uses: actions/heroku@master
+      with:
+        args: container:release web
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        HEROKU_APP: ${{ secrets.HEROKU_APP }}
 
   integration_tests:
     name: Run integration tests
