Updating versioning to 1.6

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-typescript-koa-rest",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "API REST using NodeJS and KOA framework, typescript. TypeORM for SQL with class-validators. Middlewares JWT, CORS, Winston Logger. Swagger API docs",
   "main": "dist/server.js",
   "scripts": {
@@ -11,7 +11,6 @@
     "serve": "node dist/server.js",
     "build": "npm run tslint && npm run build-ts && npm run copy-static-assets",
     "start": "npm run serve",
-    "heroku-postbuild": "npm run build",
     "test:integration": "newman run integrationtests/node-koa-typescript.postman_collection.json",
     "test:load": "locust --no-web -c 50 -r 10 -f loadtests/locustfile.py --run-time 1m --host=https://node-typescript-koa-rest.herokuapp.com"
   },
@@ -28,16 +27,15 @@
     "koa2",
     "jwt",
     "winston",
-    "rest",
-    "starter",
+    "boilerplate",
     "typeORM",
     "class-validator",
     "helmet",
     "sql",
-    "api",
-    "rest",
+    "api rest",
     "heroku",
-    "cors"
+    "cors",
+    "github actions"
   ],
   "repository": "github:javieraviles/node-typescript-koa-rest",
   "devDependencies": {
