Improving integration tests

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "node dist/server.js",
     "build": "npm run tslint && npm run build-ts && npm run copy-static-assets",
     "start": "npm run serve",
-    "test:integration": "newman run integrationtests/node-koa-typescript.postman_collection.json",
+    "test:integration": "newman run integrationtests/node-koa-typescript.postman_collection.json -e heroku-dev.postman_environment.json",
     "test:load": "locust --no-web -c 50 -r 10 -f loadtests/locustfile.py --run-time 1m --host=https://node-typescript-koa-rest.herokuapp.com"
   },
   "engines": {
