--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "npm run tslint && npm run build-ts && npm run copy-static-assets",
     "start": "npm run serve",
     "test:integration": "newman run integrationtests/node-koa-typescript.postman_collection.json -e integrationtests/heroku-dev.postman_environment.json",
-    "test:load": "locust --no-web -c 50 -r 10 -f loadtests/locustfile.py --run-time 1m --host=https://node-typescript-koa-rest.herokuapp.com"
+    "test:load": "locust --no-web -c 50 -r 10 -f loadtests/locustfile.py --run-time 1m --host=https://node-typescript-koa-rest.herokuapp.com",
+    "prettier" : "prettier --write src/**/*.ts"
   },
   "engines": {
     "node": "10.x.x",
@@ -49,10 +50,14 @@
     "@types/koa__cors": "^2.2.3",
     "@types/node": "^12.0.12",
     "@types/shelljs": "^0.8.0",
+    "husky": "^3.1.0",
     "nodemon": "^1.19.1",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "shelljs": "^0.8.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.2"
   },
   "dependencies": {
@@ -71,5 +76,10 @@
     "reflect-metadata": "^0.1.12",
     "typeorm": "^0.2.18",
     "winston": "^3.2.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
