--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,12 @@
 name: CI
 
 on:
+  push:
+    branches:
+      - develop
   pull_request:
     branches:    
-      - develop
+      - master
 
 jobs:
   build:
