--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "watch-server": "nodemon --watch src -e ts,tsx --exec ts-node src/server.ts",
     "build-ts": "tsc",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "format:check": "npx eslint . --ext .js,.jsx,.ts,.tsx",
+    "format:fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "serve": "node dist/server.js",
-    "build": "npm run tslint && npm run build-ts && npm run copy-static-assets",
+    "build": "npm run format:check && npm run build-ts && npm run copy-static-assets",
     "start": "npm run serve",
     "test:integration": "newman run integrationtests/node-koa-typescript.postman_collection.json -e integrationtests/heroku-dev.postman_environment.json",
     "test:load": "locust --no-web -c 50 -r 10 -f loadtests/locustfile.py --run-time 1m --host=https://node-typescript-koa-rest.herokuapp.com"
@@ -49,10 +50,12 @@
     "@types/koa__cors": "^2.2.3",
     "@types/node": "^12.0.12",
     "@types/shelljs": "^0.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^6.8.0",
     "nodemon": "^1.19.1",
     "shelljs": "^0.8.2",
     "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
     "typescript": "^3.5.2"
   },
   "dependencies": {
