--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,6 @@ jobs:
         python-version: '3.x'
         architecture: 'x64'
     - name: Install Locust
-      run: python3 -m pip install locustio==0.14.6
+      run: python3 -m pip install locust==1.3.1
     - name: Load tests
       run: npm run test:load
